--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,7 +11,7 @@ body {
     "footer footer";
 
   overflow-x: hidden;
-  max-width: 1024px;
+  max-width: var(--max-content-width);
   margin: 0 auto;
 
   header {
